# yandex_segmentation_project

./: README.md  dataset.sh  install.sh  main.py  pyproject.toml
mmsegmentation/: .gitignore
mmsegmentation/configs/_base_/datasets/: yandex_segementation.py
mmsegmentation/configs/_base_/schedules/: schedule_yandex_seg exp1.py  schedule_yandex_seg.py
mmsegmentation/configs/yandex_config/: baseline.py  experiment1.py
mmsegmentation/data/train_dataset_for_students/labels/: annotations.xml
mmsegmentation/mmseg/datasets/: __init__.py  train_dataset_for_students.py
mmsegmentation/mmseg/utils/: class_names.py
mmsegmentation/practicum_work/artifacts/deeplabv3_baseline/: last_checkpoint
mmsegmentation/practicum_work/artifacts/deeplabv3_baseline/20260621_125252/vis_data/: 20260621_125252.json  config.py
mmsegmentation/practicum_work/artifacts/deeplabv3_baseline/20260621_131809/vis_data/: config.py
mmsegmentation/practicum_work/artifacts/deeplabv3_experiment1/: experiment1.py  last_checkpoint
mmsegmentation/practicum_work/artifacts/results/deeplabv3_baseline/: baseline.py
mmsegmentation/practicum_work/artifacts/results/deeplabv3_experiment1/: baseline.py
mmsegmentation/practicum_work/reports/: 01_eda.md  02_hypotheses.md  03_updates.md
mmsegmentation/practicum_work/src/data_scripts/: move_files.py
mmsegmentation/practicum_work/src/notebooks/: 01_eda.ipynb  02_pipeline_check.ipynb  03_baseline_train.ipynb  04_check_basekine.ipynb  05_experiment1.ipynb  06_check_experiment.ipynb
(+13 files in other folders)
