[project]
name = "yandex-segmentation-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
  "clearml==2.0.2",
  "ftfy==6.3.1",
  "ipykernel>=7.3.0",
  "numpy==1.26.4",
  "openmim>=0.3.9",
  "pip>=8.1.2",
  "pydantic>=2.13.4",
  "regex==2025.9.18",
  "seaborn>=0.13.2",
  "setuptools<69.5.1",
  "torch==2.0.0+cu118",
  "torchaudio==2.0.1",
  "torchvision==0.15.1+cu118",
  "wheel>=0.30.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
